--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
