--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "crypto-js": "^4.2.0",
     "react": "^18.3.1",
     "react-bootstrap-icons": "^1.11.4",
     "react-circular-progressbar": "^2.1.0",
