--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.7",
     "crypto-js": "^4.2.0",
     "react": "^18.3.1",
     "react-bootstrap-icons": "^1.11.4",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-form-stepper": "^2.0.3",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
