--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.7",
     "crypto-js": "^4.2.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap-icons": "^1.11.4",
     "react-chartjs-2": "^5.2.0",
